--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,27 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.title {
+  color: aliceblue;
+}
+
+.text{
+  color: aliceblue;
+  margin-left: 2em;
+  margin-right: 2em;
+  padding: 1.5em;
+  position: relative;
+}
+
+.perfil {
+  width: 20;
+  height: 6em;
+  border-radius: 400px;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
